--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,5 @@
+/* https://coolors.co/cfe5f8-a8c9ec-7099d2-01161e-f56476 */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
