--- a/client/src/stylesheets/App.css
+++ b/client/src/stylesheets/App.css
@@ -3,6 +3,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color:#d8d8d8;
+}
+
+.infobox {
+  background-color:#aaaaaa;
 }
 
 nav {
@@ -12,7 +17,7 @@ nav {
 nav ul {
   list-style: none;
   display: flex;
-  background-color: black;
+  background-color: #606065;
   margin-bottom: 20px;
 }
 
@@ -33,7 +38,7 @@ nav ul li a {
   transition: all 0.4s ease-in-out;
 }
 .hover-shadow:hover {
-  box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.15) !important;
+  box-shadow: 0 0.5rem 1.0rem rgba(35, 63, 67, .45) !important;
 }
 
 /*
@@ -138,7 +143,7 @@ nav ul li a {
   -o-border-radius: 0 0 20px 20px;
 }
 .a-dropmenu li ul li:hover {
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgba(35, 63, 67, 0.9);
 }
 
 .a-dropmenu li ul li a span {
@@ -173,10 +178,19 @@ nav ul li a {
 .about {
   width: 1140px;
   margin: 0 auto;
+
 }
 
 .about h1 {
+  font-size: 48px;
+  color: #233f43;
+}
+
+.about h3 {
   font-size: 32px;
+  color: #233f43;
+  margin-top: 0px;
+  text-align: center;
 }
 .about div {
   text-align: left;
@@ -187,7 +201,7 @@ nav ul li a {
 }
 .about p {
   line-height: 1.5;
-  color: #666;
+  color: #233f43;
   margin-bottom: 20px;
 }
 /*  [dropdown menu] end */
