--- a/client/src/stylesheets/MembersFilter.css
+++ b/client/src/stylesheets/MembersFilter.css
@@ -3,8 +3,9 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  background-color: #A8C9EC;
+  background-color:#D8D8D8;
   width: 90%;
   padding: 5px;
   margin: 5px;
 }
+
