--- a/client/src/stylesheets/FilterSelect.css
+++ b/client/src/stylesheets/FilterSelect.css
@@ -1,11 +1,11 @@
-.select-container {
+.filter-select-container {
   display: flex;
   align-items: center;
   padding: 4px 6px;
   margin: 2px;
 }
 
-.select {
+.filter-select {
   width: 200px;
   margin-left: 8px;
 }
