--- a/client/src/listings/Listings.css
+++ b/client/src/listings/Listings.css
@@ -2,11 +2,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 80%;
+  background-color: #CFE5F8;
 }
 
 .listing-select-container {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   align-items: center;
+  border: 1px solid #D8D8D8;
+  width: 750px;
+  padding: 5px;
+  margin: 5px;
+  background-color: #A8C9EC;
 }
 
 .listing-select {
