--- a/client/src/listings/Listings.css
+++ b/client/src/listings/Listings.css
@@ -6,19 +6,22 @@
   background-color: #CFE5F8;
 }
 
-.listing-select-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  border: 1px solid #D8D8D8;
-  width: 750px;
-  padding: 5px;
-  margin: 5px;
-  background-color: #A8C9EC;
-}
-
 .listing-select {
   width: 450px;
   margin-left: 8px;
+}
+
+.MuiPagination-ul {
+  background-color: #FFFFFF;
+}
+
+.MuiPaper-root {
+  text-align: left;
+
+}
+.ratingAlign{
+  align-content: right;
+}
+.MuiAccordionSummary-content.Mui-expanded {
+  margin: 0;
 }
