--- a/client/src/members/Members.css
+++ b/client/src/members/Members.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 80%;
-  background-color: #CFE5F8;
+  background-color: #FFFFFF;
 }
 
 .filter-container {
@@ -11,11 +11,11 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  border: 1px solid #D8D8D8;
+  border: 1px solid #DDDDDD;
   width: 750px;
   padding: 5px;
   margin: 5px;
-  background-color: #A8C9EC;
+  background-color: #DDDDDD;
 }
 
 .filter-select-container {
@@ -28,4 +28,16 @@
 .filter-select {
   width: 200px;
   margin-left: 8px;
+}
+
+.MuiPagination-ul {
+  background-color: #FFFFFF;
+}
+
+.MuiPaper-root {
+  text-align: left;
+}
+
+.MuiAccordionSummary-content.Mui-expanded {
+  margin: 0;
 }
