--- a/client/src/signin/SignIn.css
+++ b/client/src/signin/SignIn.css
@@ -1,4 +1,4 @@
-.members-container {
+.signin-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,26 +6,3 @@
   background-color: #CFE5F8;
 }
 
-.filter-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  border: 1px solid #D8D8D8;
-  width: 750px;
-  padding: 5px;
-  margin: 5px;
-  background-color: #A8C9EC;
-}
-
-.filter-select-container {
-  display: flex;
-  align-items: center;
-  padding: 4px 6px;
-  margin: 2px;
-}
-
-.filter-select {
-  width: 200px;
-  margin-left: 8px;
-}
