--- a/client/src/listings/Listings.css
+++ b/client/src/listings/Listings.css
@@ -4,6 +4,9 @@
   align-items: center;
   width: 80%;
   background-color: #CFE5F8;
+  border: 1px solid #f2f2f2;
+  border-radius: 20px;
+  margin: 20px 0;
 }
 
 .listing-select {
@@ -12,7 +15,7 @@
 }
 
 .MuiPagination-ul {
-  background-color: #FFFFFF;
+  background-color: #CFE5F8;
 }
 
 .MuiPaper-root {
