--- a/client/src/members/Members.css
+++ b/client/src/members/Members.css
@@ -11,11 +11,13 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  border: 1px solid #DDDDDD;
+  border: 1px solid #CFE5F8;
   width: 750px;
-  padding: 5px;
+  padding: 15px;
   margin: 5px;
-  background-color: #DDDDDD;
+  background-color: #CFE5F8;
+  border: 1px solid #f2f2f2;
+  border-radius: 20px;
 }
 
 .filter-select-container {
@@ -27,7 +29,6 @@
 
 .filter-select {
   width: 200px;
-  margin-left: 8px;
 }
 
 .MuiPagination-ul {
