--- a/client/src/signin/SignIn.css
+++ b/client/src/signin/SignIn.css
@@ -4,5 +4,10 @@
   align-items: center;
   width: 80%;
   background-color: #CFE5F8;
+  border: 1px solid #CFE5F8;
+  width: 750px;
+  padding: 15px;
+  margin: 5px;
+  border: 1px solid #f2f2f2;
+  border-radius: 20px;
 }
-
