--- a/client/src/about/About.css
+++ b/client/src/about/About.css
@@ -15,7 +15,25 @@
   border-radius: 20px;
   transition: all 0.4s ease-in-out;
 }
+
 .about-block:hover {
+  box-shadow: 0 0.5rem 1.0rem rgba(35, 63, 67, .45);
+}
+
+.about-block-center {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  background-color:#CFE5F8;
+  padding: 20px;
+  margin: 20px 0;
+  border: 1px solid #f2f2f2;
+  border-radius: 20px;
+  transition: all 0.4s ease-in-out;
+}
+
+.about-block-center:hover {
   box-shadow: 0 0.5rem 1.0rem rgba(35, 63, 67, .45);
 }
 
