--- a/client/src/app/App.css
+++ b/client/src/app/App.css
@@ -23,3 +23,11 @@
   text-decoration: none;
   color: #FFFFFF;
 }
+.navbar-minis:hover {
+  color: #cfe5f8;
+}
+.navbar-toolbar .active {
+  color:aquamarine;
+  text-decoration: underline;
+  
+}
