--- a/client/src/about/About.css
+++ b/client/src/about/About.css
@@ -1,5 +1,5 @@
 .about {
-  width: 1140px;
+  width: 80%;
   margin: 0 auto;
 }
 
@@ -7,8 +7,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  text-align: left;
-  background-color:#CFE5F8;
+  text-align: center;
+  background-color: rgb(250, 245, 240);
   padding: 20px;
   margin: 20px 0;
   border: 1px solid #f2f2f2;
@@ -25,7 +25,7 @@
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  background-color:#CFE5F8;
+  background-color: rgb(250, 245, 240);
   padding: 20px;
   margin: 20px 0;
   border: 1px solid #f2f2f2;
@@ -58,5 +58,6 @@
 }
 
 .about-block-img {
-  width: 580px;
+  max-width: 600px;
+  border-radius: 10%;
 }
