--- a/client/src/app/App.css
+++ b/client/src/app/App.css
@@ -19,15 +19,21 @@
   color: #F56476;
 }
 
+.navbar-header-home {
+  text-decoration: none !important;
+  color: #F56476 !important;
+  
+}
+
 .navbar-minis {
   text-decoration: none;
   color: #FFFFFF;
 }
 .navbar-minis:hover {
-  color: #cfe5f8;
+  color: #F56476;
 }
 .navbar-toolbar .active {
-  color:aquamarine;
+  color:#F56476;
   text-decoration: underline;
   
 }
