--- a/client/src/listings/Listings.css
+++ b/client/src/listings/Listings.css
@@ -3,19 +3,15 @@
   flex-direction: column;
   align-items: center;
   width: 80%;
-  background-color: #CFE5F8;
   border: 1px solid #f2f2f2;
   border-radius: 20px;
-  margin: 20px 0;
+  padding: 30px;
+  margin-top: 20px;
 }
 
 .listing-select {
   width: 450px;
   margin-left: 8px;
-}
-
-.MuiPagination-ul {
-  background-color: #CFE5F8;
 }
 
 .MuiPaper-root {
