--- a/client/src/app/main/Main.css
+++ b/client/src/app/main/Main.css
@@ -1,7 +1,7 @@
 .main {
   width: 80%;
   margin: 0 auto;
-  background-color: azure;
+  /* background-color: azure; */
   /* border-radius: 10px; */
   /* box-shadow: 0px 0px 3px 3px gray; */
 }
