--- a/client/src/members/Members.css
+++ b/client/src/members/Members.css
@@ -1,21 +1,13 @@
-.members-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 80%;
-  background-color: #FFFFFF;
-}
-
 .filter-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  border: 1px solid #CFE5F8;
+  border: 1px solid #cfe5f8;
   width: 750px;
   padding: 15px;
   margin: 5px;
-  background-color: #CFE5F8;
+  background-color: #cfe5f8;
   border: 1px solid #f2f2f2;
   border-radius: 20px;
 }
@@ -27,8 +19,16 @@
   margin: 2px;
 }
 
+.member-row {
+  cursor: pointer;
+}
+
+.member-row:hover {
+  background-color: #cfe5f8;
+}
+
 .MuiPagination-ul {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 .MuiPaper-root {
