--- a/client/src/about/About.css
+++ b/client/src/about/About.css
@@ -1,17 +1,10 @@
 .about {
-  width: 80%;
-  margin: 0 auto;
-}
-
-.about-block {
-  background-color: rgb(250, 245, 240);
-  padding: 20px;
-  margin: 20px 0;
-  border: 1px solid #f2f2f2;
-  border-radius: 20px;
+  text-align: center;
 }
 
 .about-block-img {
-  max-width: 600px;
-  border-radius: 10%;
+  width: 100%;
+  max-height: 250px;
+  border-radius: 50px;
+  object-fit: cover;
 }
