--- a/client/src/app/main/Main.css
+++ b/client/src/app/main/Main.css
@@ -10,7 +10,7 @@
   width: 100%;
   height: 100vh;
   z-index: -1;
-  background-image: url('./wood-background.jpg');
+  background-image: url('../../images/wood-background.jpg');
   background-repeat: repeat;
   background-size: contain;
   mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), 75%, rgba(0, 0, 0, 0));
