--- a/client/src/home/Home.css
+++ b/client/src/home/Home.css
@@ -1,22 +1,50 @@
-.homepage-container h3 {
-  color: #5e5e5e;
-}
-
-.homepage-container {
-  width: 80%;
-}
-
-.roundimg {
-  border-radius: 20%;
-  max-width: 80%;
-}
-
-.logo-container {
-  align-content: center;
-  padding-bottom: 30px;
-}
-
-.logoimg {
+.home-header-img {
+  width: 100%;
   max-height: 250px;
-  padding: 20px;
+  border-radius: 50px;
+  object-fit: cover;
+}
+
+.home-header-text {
+  text-align: center;
+  font-size: 52pt;
+  margin: 5px auto 50px;
+}
+
+.home-subtitle-left {
+  text-align: left;
+  margin: 20px 10%;
+}
+
+.home-subtitle-right {
+  text-align: right;
+  margin: 50px 10%;
+}
+
+.home-mandate-container {
+  padding: 30px 0;
+}
+
+.home-mandate-img {
+  width: 100%;
+  max-height: 300px;
+  border-radius: 50px;
+  object-fit: cover;
+}
+
+.home-mandate-text {
+  text-align: center;
+}
+
+.home-mandate-subtitle {
+  text-align: center;
+  margin: 0;
+}
+
+.home-mandate-more-container {
+  padding: 10px;
+}
+
+.home-mandate-more {
+  margin: 0 5px;
 }
